# derive-ctor

./: Cargo.toml  README.md
.github/workflows/: rust-cd.yml  rust-ci.yml  rust-publish.yml
doc/: overview.md
src/: constants.rs  enums.rs  fields.rs  lib.rs  structs.rs  unions.rs
tests/: enum_base.rs  enum_ctor_config.rs  enum_default_config.rs  enum_unnamed_variants.rs  enum_variant_config.rs  shorthand_field_config.rs  struct_base.rs  struct_const_ctor_config.rs  struct_ctor_config.rs  struct_ctor_config_default.rs  struct_field_all.rs  struct_field_cloned.rs  struct_field_default.rs  struct_field_expr.rs  struct_field_impl.rs  struct_field_into.rs  struct_field_iter.rs  struct_field_specific_ctor.rs  struct_field_value.rs  struct_mixed_method_field.rs  struct_phantom_data.rs  test.rs  union.rs
