[package]
name = "derive-ctor"
version = "0.2.3"
description = "Adds `#[derive(ctor)]` which allows for the auto-generation of struct and enum constructors."
keywords = ["derive", "macro", "trait", "procedural", "no_std"]
authors = ["Evan Cowin"]
license = "MIT"
repository = "https://github.com/ImaMapleTree/derive-ctor"
edition = "2021"
exclude = [".github/*", ".gitignore"]
categories = ["no-std", "rust-patterns"]

[features]
default = ["structs", "enums"]
enums = ["dep:heck"]
structs = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.*" }
quote = { version = "1.*" }
proc-macro2 = { version = "1.0.*" }
heck = { version = "0.5.*", optional = true }