[package]
name = "derive-ctor"
version = "1.0.0"
description = "Adds `#[derive(ctor)]` which allows for the auto-generation of struct, enum, and union constructors."
keywords = ["derive", "macro", "trait", "procedural", "no_std"]
authors = ["Evan Cowin"]
license = "MIT"
repository = "https://github.com/ImaMapleTree/derive-ctor"
edition = "2021"
exclude = [".github/*", ".gitignore"]
categories = ["no-std", "rust-patterns"]

[features]
default = ["structs", "enums", "unions"]
enums = ["dep:heck"]
structs = []
unions = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.*" }
quote = { version = "1.*" }
proc-macro2 = { version = "1.0.*" }
heck = { version = "0.5.*", optional = true }